# sim4py

./: LICENSE  README.md  setup.py
example/: run_simulation.py
example/compton_camera/: run_simulation.py
example/gamma_camera/: run_simulation.py  test.root
example/gantry/: make_image.py  run_simulation.py  test_merge0.root  test_merge0_ana.root
sim4py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/: CMakeLists.txt  main.cpp  pymain.cpp
source/action_initialization/: ActionInitialization.cpp  ActionInitialization.hpp  AnalysisManager.cpp  AnalysisManager.hpp  CMakeLists.txt  EventAction.cpp  EventAction.hpp  RunAction.cpp  RunAction.hpp  SteppingAction.cpp
source/detector_construction/: CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.hpp  HitsCollection.cpp  HitsCollection.hpp  SensitiveDetector.cpp  SensitiveDetector.hpp
source/physics_list/: CMakeLists.txt  CustomizedLivermorePhysics.cpp  CustomizedLivermorePhysics.hpp  PhysicsConstructor.cpp  PhysicsConstructor.hpp  PhysicsList.cpp  PhysicsList.hpp
source/user_interface/: CMakeLists.txt  UIcmdWithAKeyAValueAndUnit.cpp  UIcmdWithAKeyAValueAndUnit.hpp  UIcmdWithCustomizableArguments.cpp  UIcmdWithCustomizableArguments.hpp  UImessenger.cpp  UImessenger.hpp
src/: CMakeLists.txt  main.cpp  sim4-py.cpp
src/clhep/: ConstantDefinition.hpp  clhep-py.cpp  clhep-py.hpp  old.UnitDefinition.hpp  print_units.sh
src/general/: P4RunManager.cpp  P4RunManager.hpp  general-py.cpp  general-py.hpp  old.geant4-py.cpp  old.geant4-py.hpp  old.pyfunc.cpp
src/general/action/: P4ActionInitialization.cpp  P4ActionInitialization.hpp  P4EventAction.cpp  P4EventAction.hpp  P4GeneralParticleSource.cpp  P4GeneralParticleSource.hpp  P4ParticleGun.cpp  P4ParticleGun.hpp  P4PrimaryGeneratorAction.cpp  P4PrimaryGeneratorAction.hpp  P4RunAction.cpp  P4RunAction.hpp  P4SphericalSource.cpp  P4SphericalSource.hpp
src/general/analysis/: P4RootAnalysisManager.cpp  P4RootAnalysisManager.hpp
src/general/detector/: P4DetectorConstruction.cpp  P4DetectorConstruction.hpp  P4GeometryConstruction.cpp  P4GeometryConstruction.hpp  P4PVConstruct.cpp  P4PVConstruct.hpp
src/general/run/: P4RunManager.cpp  P4RunManager.hpp
src/python_interface/: ParameterGene.hpp  ParameterGene.hpp.save  Singleton.hpp  UnitDefinition.hpp  old.ANLparametrizer.hpp  old.VANL_Module.cpp  old.VANLmodule.hpp  print_spec.sh
src/wstrip/: GeometryCollimatorMINE1.cpp  GeometryCollimatorMINE1.hpp  PrimaryGeneratorAction.hpp  SteppingAction.cpp  W4ActionInitialization.cpp  W4ActionInitialization.hpp  W4AirContainBox.cpp  W4AirContainBox.hpp  W4DetectorConstruction.cpp  W4DetectorConstruction.hpp  W4DoublesidedStripDetector.cpp  W4DoublesidedStripDetector.hpp  W4EmStandardPhysicsSwitchingDoppler.hpp  W4EmStandardPhysicsSwitchingDoppler.icc  W4EventAction.cpp  W4EventAction.hpp  W4HitsCollection.cpp  W4HitsCollection.hpp  W4RunAction.cpp  W4RunAction.hpp  W4SensitiveDetector.cpp  W4SensitiveDetector.hpp  W4SteppingAction.cpp  W4SteppingAction.hpp  wstrip-py.cpp  wstrip-py.hpp
src/wstrip/not_use/: PrimaryGeneratorAction.cpp  SteppingAction.hpp  W4HitsCollection.cpp
test/: old.run_simulation.py  run_simulation.py  simple.py
user_module/geometry1/: setup.py
user_module/geometry1/run/: old.run_simulation.py  run_simulation.py  test.root  test_merge0.root
user_module/geometry1/src/: CMakeLists.txt  UserVolume.cpp
user_module/geometry2/src/: CMakeLists.txt  UserG4Volume.cpp  UserVolume.hpp  user_geometry1.cpp
user_module/simple1/src/: CMakeLists.txt  user_module.cpp
